--- a/index.html
+++ b/index.html
@@ -36,53 +36,65 @@
 
         <div class="flex justify-between w-auto gap-4 mx-12 px-12">
             <div class="grid grid-cols-3 gap-4 S w-10/12 mr-4">
+                <!-- player1 -->
                 <div class="text-center bg-gray-800 border border-white">
                     <img class="w-full" src="images/Lionel Messi.png">
                     <h1 class="text-white text-3xl font-medium my-3">Lionel Messi</h1>
                     <p class="text-white">
                         <span>36 Goals</span> . <span>120 Assist</span>
                     </p>
-                    <button class="bg-cyan-700 w-9/12 py-1 text-white my-3 text-lg font-medium">Select</button>
+                    <button id="player1" class="bg-cyan-700 w-9/12 py-1 text-white my-3 text-lg font-medium"
+                        onclick="addPlayer(this)">Select</button>
                 </div>
+                <!-- player2 -->
                 <div class="text-center bg-gray-800 border border-white">
                     <img class="w-full" src="images/Neymar Jr.png">
                     <h1 class="text-white text-3xl font-medium my-3">Neymar Jr</h1>
                     <p class="text-white">
                         <span>36 Goals</span> . <span>120 Assist</span>
                     </p>
-                    <button class="bg-cyan-700 w-9/12 py-1 text-white my-3 text-lg font-medium">Select</button>
+                    <button id="player2" class="bg-cyan-700 w-9/12 py-1 text-white my-3 text-lg font-medium"
+                        onclick="addPlayer(this)">Select</button>
                 </div>
+                <!-- player3 -->
                 <div class="text-center bg-gray-800 border border-white">
                     <img class="w-full" src="images/Kylian Mbappé.png">
                     <h1 class="text-white text-3xl font-medium my-3">Kylian Mbappé</h1>
                     <p class="text-white">
                         <span>36 Goals</span> . <span>120 Assist</span>
                     </p>
-                    <button class="bg-cyan-700 w-9/12 py-1 text-white my-3 text-lg font-medium">Select</button>
+                    <button id="player3" class="bg-cyan-700 w-9/12 py-1 text-white my-3 text-lg font-medium"
+                        onclick="addPlayer(this)">Select</button>
                 </div>
+                <!-- player4 -->
                 <div class="text-center bg-gray-800 border border-white">
                     <img class="w-full" src="images/Vítor Machado.png">
                     <h1 class="text-white text-3xl font-medium my-3">Vítor Machado</h1>
                     <p class="text-white">
                         <span>36 Goals</span> . <span>120 Assist</span>
                     </p>
-                    <button class="bg-cyan-700 w-9/12 py-1 text-white  my-3 text-lg font-medium">Select</button>
+                    <button id="player4" class="bg-cyan-700 w-9/12 py-1 text-white  my-3 text-lg font-medium"
+                        onclick="addPlayer(this)">Select</button>
                 </div>
+                <!-- player5 -->
                 <div class="text-center bg-gray-800 border border-white">
                     <img class="w-full" src="images/Sergio Ramos.png">
                     <h1 class="text-white text-3xl font-medium my-3">Sergio Ramos</h1>
                     <p class="text-white">
                         <span>36 Goals</span> . <span>120 Assist</span>
                     </p>
-                    <button class="bg-cyan-700 w-9/12 py-1 text-white my-3  text-lg font-medium">Select</button>
+                    <button id="player5" class="bg-cyan-700 w-9/12 py-1 text-white my-3  text-lg font-medium"
+                        onclick="addPlayer(this)">Select</button>
                 </div>
+                <!-- player6 -->
                 <div class="text-center bg-gray-800 border border-white">
                     <img class="w-full" src="images/Renato Sanches.png">
                     <h1 class="text-white text-3xl font-medium my-3">Renato Sanches</h1>
                     <p class="text-white">
                         <span>36 Goals</span> . <span>120 Assist</span>
                     </p>
-                    <button class="bg-cyan-700 w-9/12 py-1 text-white  text-lg font-medium my-3">Select</button>
+                    <button id="player6" class="bg-cyan-700 w-9/12 py-1 text-white  text-lg font-medium my-3"
+                        onclick="addPlayer(this)">Select</button>
                 </div>
 
             </div>
@@ -91,13 +103,13 @@
                     <div class="pb-4">
                         <h1 class="text-3xl pt-4 font-medium ">Selected-V</h1>
                         <img class="float-middle pb-8 pl-8 ml-4" src="images/Ureg-Ureg Marker.png" alt="">
-                        <ol>
-                            <li>1.Lionel Messi</li>
-                            <li>2.Neymar Jr</li>
-                            <li>3.Vítor Machado</li>
-                            <li>4.Sergio Ramos</li>
-                            <li>5.Renato Sanches</li>
-                        </ol>
+                        <ul id="player-list">
+                            <li>Lionel Messi</li>
+                            <li>Neymar Jr</li>
+                            <li>Vítor Machado</li>
+                            <li>Sergio Ramos</li>
+                            <li>Renato Sanches</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="bg-gray-800 text-white text-center mb-5 pb-8 ">
@@ -106,7 +118,8 @@
                         <img class="float-middle pb-8 pl-8 ml-4" src="images/Ureg-Ureg Marker.png" alt="">
                         <div class="flex  pl-4 mx-4">
                             <h4>Per Player</h4>
-                            <input class="w-2/4 ml-2 border border-white bg-gray-800" type="text" name="" id="">
+                            <input id="per-player-budget" class="w-2/4 ml-2 border border-white bg-gray-800" type="text"
+                                name="" id="">
 
                         </div>
                         <button id="btn-player-budget-calculate"
@@ -114,18 +127,20 @@
 
                         <div class="flex pl-4 mx-4 mb-2">
                             <h4 class="mr-3">Player Expense</h4>
-                            <h4>$<span>5000</span></h4>
+                            <h4>$<span id="get-player-expenses">5000</span></h4>
 
                         </div>
 
                         <div>
                             <div class="flex pl-4 mb-4 mx-4">
                                 <h4>Manager</h4>
-                                <input class="w-2/4 ml-2 border border-white bg-gray-800" type="text" name="" id="">
+                                <input id="manager-budget" class="w-2/4 ml-2 border border-white bg-gray-800"
+                                    type="text" name="" id="">
                             </div>
                             <div class="flex justify-around mx-4">
                                 <h4>Coach</h4>
-                                <input class="w-2/4 border border-white bg-gray-800 " type="text" name="" id="">
+                                <input id="coach-budget" class="w-2/4 border border-white bg-gray-800 " type="text"
+                                    name="" id="">
                             </div>
 
 
@@ -147,7 +162,10 @@
     <footer class="border-t-2 border-white my-8 py-8">
         <p class="text-center text-white pt-3"><small>Copyright @ 2022 All Rights Reserved.</small> </p>
     </footer>
+    <script src="js/playerlist.js"></script>
+
     <script src="js/budget.js"></script>
+
 </body>
 
 </html>
