--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@
                         <h1 class="text-3xl pt-4 font-medium ">Selected-V</h1>
                         <img class="float-middle pb-8 pl-8 ml-4" src="images/Ureg-Ureg Marker.png" alt="">
                         <ul id="player-list">
-                            <li>Lionel Messi</li>
-                            <li>Neymar Jr</li>
-                            <li>Vítor Machado</li>
-                            <li>Sergio Ramos</li>
-                            <li>Renato Sanches</li>
+
                         </ul>
                     </div>
                 </div>
@@ -127,7 +123,7 @@
 
                         <div class="flex pl-4 mx-4 mb-2">
                             <h4 class="mr-3">Player Expense</h4>
-                            <h4>$<span id="get-player-expenses">5000</span></h4>
+                            <h4>$<span id="get-player-expenses">00</span></h4>
 
                         </div>
 
@@ -152,7 +148,7 @@
                         </div>
                         <div class="flex justify-between pl-4 mx-4 mb-2">
                             <h4 class="mr-6">Total</h4>
-                            <h4>$<span>11000</span></h4>
+                            <h4>$<span id="total-Amount">00</span></h4>
                         </div>
                     </div>
                 </div>
