--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
             <div class="mt-8">
                 <img class="h-full mt-5" src="images/Group 12.png">
             </div>
-            <div class="mt-10 w-full p-8 mr-3">
+            <div class="mt-10 w-full p-8 mr-3 mt-12">
                 <h1 class="text-6xl font-serif text-amber-600 text-center">Let's Play With The Best Five</h1>
                 <img class="float-right " src="images/Line Marker.png">
                 <br>
-                <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                    atque
-                    reprehenderit
-                    exercitationem at,
-                    similique non ea animi doloribus inventore doloremque, cumque asperiores! Tempora corrupti incidunt
-                    architecto itaque officiis exercitationem, totam eos a dolore voluptatem inventore expedita dolor
-                    magnam earum molestiae.</p>
+                <p class="text-white text-center mt-8 text-2xl">Who doesn't want to watch a goal tournament featuring
+                    the
+                    5 best
+                    players in the world? So what are you waiting for? You've got 5 best player of the best football
+                    you'll
+                    ever see! Select your best five and rock it.</p>
             </div>
 
         </section>
@@ -148,7 +147,7 @@
                         </div>
                         <div class="flex justify-between pl-4 mx-4 mb-2">
                             <h4 class="mr-6">Total</h4>
-                            <h4>$<span id="total-Amount">00</span></h4>
+                            <h4 class="text-amber-600 ">$<span id="total-Amount">00</span></h4>
                         </div>
                     </div>
                 </div>
